# Sandbox

./: .gitignore  Application.cpp  Application.hpp  BasicShader.cpp  BasicShader.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  FileReader.cpp  FileReader.hpp  ImageLoader.cpp  ImageLoader.hpp  Main.cpp  Mesh.cpp  Mesh.hpp  README.md  Shader.cpp  Shader.hpp  ShaderLoader.cpp  Tessellator.cpp  Tessellator.hpp  Texture.cpp  Tile.cpp  Tile.hpp  UniformLoader.cpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferBuilder.cpp  VertexBufferBuilder.hpp  World.cpp  World.hpp  sandbox.sln  sandbox.vcxproj  sandbox.vcxproj.filters  unresolved problems.txt
Input/: Key.hpp  KeyMapping.cpp  Keyboard.cpp  Keyboard.hpp
Registries/: Keys.cpp  Keys.hpp  Registry.cpp  Registry.hpp
Scenes/: PlayScene.cpp  PlayScene.hpp  Scene.hpp
Shaders/: Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  UniformLoader.hpp
Texture/: Texture.cpp  Texture.hpp
Util/: ImageLoader.cpp  ImageLoader.hpp
World/: World.cpp  World.hpp
cmake/: path_to_sdl2.cmake  sdl2-config.cmake  what do you need to do.txt
dependencies/glad/: CMakeLists.txt  glad.c  glad.h
resources/shaders/: basic.frag  basic.vert  chunk.frag  chunk.vert  shader.vert
sources/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Context.cpp  RegistryHolder.cpp  RegistryHolder.hpp  SDLHolder.cpp  SDLHolder.hpp  Window.cpp  Window.hpp
sources/Block/: AirBlock.cpp  AirBlock.hpp  Block.cpp  Block.hpp
sources/Entity/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
sources/Holder/: BlockModelHolder.cpp  BlockModelHolder.hpp  RegistryHolder.cpp  SDLHolder.cpp  SDLHolder.hpp
sources/Input/: KeyEventHandler.hpp  KeyMapping.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  MouseButtonMapping.cpp  MouseButtonMapping.hpp
sources/Math/: Ray.cpp  Ray.hpp
sources/Mesh/: ChunkMesh.cpp  ChunkMesh.hpp  ChunkMeshBuilder.cpp  ChunkMeshBuilder.hpp  ElementBuffer.cpp  ElementBuffer.hpp  Faces.hpp  Mesh.cpp  Mesh.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
sources/Physics/: AABB.cpp  AABB.hpp
sources/Registry/: Blocks.cpp  Blocks.hpp  InputListeners.cpp  InputListeners.hpp  KeyMappings.cpp  KeyMappings.hpp  MouseButtonMappings.cpp  MouseButtonMappings.hpp  Registry.cpp  Registry.hpp  Registry.inl
sources/Renderer/: ChunkRenderer.cpp  ChunkRenderer.hpp  RenderMaster.cpp  RenderMaster.hpp
sources/Renderer/Model/: BlockModel.cpp  BlockModel.hpp
sources/Scene/: PlayScene.cpp  PlayScene.hpp  Scene.cpp
sources/Shader/: BasicShader.cpp  BasicShader.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  UniformLoader.hpp
sources/State/: PlayingState.cpp  PlayingState.hpp  State.cpp  State.hpp
sources/Texture/: BlocksAtlas.cpp  BlocksAtlas.hpp  Texture.cpp  Texture.hpp
sources/Util/: BlockPos.hpp  ChunkPos.cpp  ChunkPos.hpp  Clock.cpp  Clock.hpp  Folders.hpp  ImageLoader.cpp  ImageLoader.hpp  Paths.hpp  Singleton.hpp  Singleton.inl  Time.cpp  Time.hpp  Time.inl
sources/Util/Destroyer/: SDLGLContextDestroyer.hpp  SDLWindowDestroyer.hpp
sources/World/: World.cpp  World.hpp
sources/World/Chunk/: Chunk.cpp  Chunk.hpp  ChunkConstants.hpp  ChunkSection.cpp  ChunkSection.hpp
